[JN]-Added Update

--- a/E-CommerceWithDTO.API/E-CommerceWithDTO.API.csproj
+++ b/E-CommerceWithDTO.API/E-CommerceWithDTO.API.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>E_CommerceWithDTO.API</RootNamespace>
+	<Authors>Joy Ng</Authors>
+	<Copyright>© 2024 Joy Ng. All Rights Reserved.</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
